<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (c) 2020 Razeware LLC
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in
  ~  * all copies or substantial portions of the Software.
  ~  *
  ~  * Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~  * distribute, sublicense, create a derivative work, and/or sell copies of the
  ~  * Software in any work that is designed, intended, or marketed for pedagogical or
  ~  * instructional purposes related to programming, coding, application development,
  ~  * or information technology.  Permission for such use, copying, modification,
  ~  * merger, publication, distribution, sublicensing, creation of derivative works,
  ~  * or sale is expressly withheld.
  ~  *
  ~  * This project and source code may use libraries or frameworks that are
  ~  * released under various Open-Source licenses. Use of those libraries and
  ~  * frameworks are governed by their own individual licenses.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~  * THE SOFTWARE.
  ~  */
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/white"
  tools:context=".ui.LoginActivity">

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/max_padding"
    android:onClick="onClickLogin"
    android:text="@string/btn_login"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/password" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonBiometricsLogin"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/max_padding"
    android:drawablePadding="@dimen/default_padding"
    android:drawableStart="@drawable/ic_fingerprint"
    android:onClick="onClickBiometrics"
    android:text="@string/use_biometrics"
    android:visibility="gone"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

  <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/max_padding"
    android:hint="@string/username_hint"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@id/guideline" />

  <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/max_padding"
    android:hint="@string/password"
    android:imeOptions="actionDone"
    android:inputType="textPassword"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/username" />

  <androidx.appcompat.widget.AppCompatTextView
    style="@style/TextAppearance.AppCompat.Display3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textColor="@color/colorAccent"
    app:layout_constraintBottom_toBottomOf="@id/guideline"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.30" />

</androidx.constraintlayout.widget.ConstraintLayout>
